# rbscope

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: collector-ci.yml  ebpf-e2e.yml  fuzz-nightly.yml  gem-ci.yml
collector/: .golangci.yml  Dockerfile  Makefile  go.mod  go.sum
collector/cmd/rbscope-collector/: main.go  profile.go
collector/deploy/k8s/: configmap.yaml  daemonset.yaml  namespace.yaml  rbac.yaml
collector/internal/: version.go
collector/pkg/bpf/: combined_linux.go  fd_helpers.h  generate.go  gvl_tracer.c  (+19 more)
docs/: architecture.md  deployment.md  ruby-versions.md  testing.md
gem/: Cargo.toml  Gemfile  Rakefile  rbscope.gemspec  valgrind.suppressions
gem/ext/rbscope/: Cargo.toml  extconf.rb
gem/ext/rbscope/src/: allocation_tracker.rs  lib.rs  probes.rs  sampler.rs  stack.rs
gem/lib/: rbscope.rb
gem/test/: test_allocation_tracker.rb  test_dynamic_rate.rb  test_fork_safety.rb  test_gc_compaction.rb  test_gvl_profiling.rb  test_helper.rb  test_otel_exporter.rb  test_overhead.rb  test_sampling.rb  test_signal_safety.rb  test_stack_caching.rb  test_thread_safety.rb
kind/: cluster.yaml
kind/manifests/: rbscope-collector.yaml  test-app.yaml
otel-collector/: config.yaml
proto/: rbscope.pb.go  rbscope.proto
scripts/: lima-bpf-test.yaml  rbscope_init.rb  setup-dev-vm.sh  smoke-test.sh
test-rails-app/: Dockerfile  Gemfile  config.ru
test-rails-app/config/: application.rb  database.yml  environment.rb  pitchfork.rb  routes.rb
test-rails-app/db/: seeds.rb
(+59 files in other folders)
